--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "squizlabs/php_codesniffer": "^3.9",
     "phpstan/phpstan": "^1.11",
     "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-    "wp-coding-standards/wpcs": "^3.0"
+    "wp-coding-standards/wpcs": "^3.0",
+    "php-stubs/wordpress-stubs": "^6.5"
   },
   "autoload": {
     "psr-4": {
@@ -32,4 +33,3 @@
     }
   }
 }
-
