--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,7 @@ parameters:
   level: 8
   paths:
     - src
-  checkGenericClassInNonGenericObjectType: false
   bootstrapFiles:
+    - tools/phpstan-bootstrap.php
     - vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
+  checkGenericClassInNonGenericObjectType: false
