--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   push:
     branches: [ main ]
+    tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
 
@@ -33,3 +34,9 @@ jobs:
           name: virakcloud-backup
           path: dist/virakcloud-backup.zip
           if-no-files-found: error
+      - name: Create GitHub Release (on tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/virakcloud-backup.zip
+          fail_on_unmatched_files: true
