--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,20 @@ jobs:
         run: composer stan
       - name: Tests (PHPUnit)
         run: composer test
+      - name: Compile Translations (PO→MO)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gettext
+          if [ -d languages ]; then
+            shopt -s nullglob
+            for po in languages/*.po; do
+              mo="${po%.po}.mo"
+              echo "Compiling $po -> $mo"
+              msgfmt -o "$mo" "$po"
+            done
+          else
+            echo "No languages directory found; skipping PO→MO compilation."
+          fi
       - name: Prepare Production Vendor
         run: composer install --no-dev --prefer-dist --optimize-autoloader
       - name: Build Zip
